@@ -450,15 +450,37 @@ test linprog-1.3 "Symmetric constraints, case 4" \
     } \
     -result 1
 
-#
-# TODO: Current algorithm makes no difference between infeasible
-#       and unbounded
-#
-test linprog-2.1 "Unbounded program" \
+test linprog-2.1 "Unbounded program 1" \
     -body {
 	set result [solveLinearProgram {3.0 4.0} {{1.0 -2.0 1.0} {-2.0 1.0 1.0}} ]
     } \
+    -result "unbounded"
+
+test linprog-2.2 "Unbounded program 2" \
+    -body {
+	set result [::math::optimize::solveLinearProgram {2.0 1.0} {{3.0 0.0 6.0} {1.0  0.0 2.0}}]
+    } \
+    -result "unbounded"
+
+test linprog-2.3 "Infeasible program" \
+    -body {
+	set result [::math::optimize::solveLinearProgram {2.0 1.0} {{3.0 1.0 6.0} {1.0 -1.0 2.0} {0.0 1.0 -3.0}}]
+    } \
     -result "infeasible"
+
+test linprog-2.4 "Degenerate program" \
+    -body {
+	# Solution: {1.0 3.0}
+	set result [::math::optimize::solveLinearProgram {2.0 1.0} {{3.0 1.0 6.0} {1.0 -1.0 2.0} {0.0 1.0 3.0}}]
+	set ok 1
+	if { ! [within_range [lindex $result 0]  0.99999  1.00001] ||
+	     ! [within_range [lindex $result 1]  2.99999  3.00001] } {
+	      set ok 0
+	}
+	set ok
+
+    } \
+    -result 1
 
 test linprog-3.1 "Simple 3D program" \
    -body {
